晚上到此休息

--- a/src/ch-2-02.md
+++ b/src/ch-2-02.md
@@ -14,6 +14,20 @@
 
 接到客户提供的开发文档和期望的效果图，谈好日期和要求等。由于是个人做网站，很多要求都是口头上的，而且是大致想法，并没有太多纸质文档。各种进展都是随着开发的进行慢慢协商修改的。效率不高。在开发后期，由于进度太慢，购买了别人已经成熟的产品，几乎宣告了本网站的失败。所幸提供了一些操作界面等方面的参考内容，接下来就是在明知几乎被抛弃的前提下，出于学习的目的，模仿别人已经成熟的界面，完善网站的内容。
 
+## 二、任务分割
+
+根据需求及设计建议，可以分为如下几个模块。用户及权限管理模块、学员录入归档模块、博客模块、消息模块等。对应的各个模块实现的功能如下。
+
+### 2.1 用户及角色权限管理模块
+
+用户的角色可以分为如下五类，教管干部、学员、教员、网管和访客。
+
+- 教管干部，主要指各级领导，比如各级队长等。主要负责成绩等的录入。
+- 教员，主要指教员。主要负责计划等的录入。
+- 学员，
+- 网管，
+- 访客。
+
 ### 1.1、 按用户类型划分任务
 
 做人员在位状态动态管理系统。不同权限的用户使用不同的用户界面。
