--- a/src/ch-7-02.md
+++ b/src/ch-7-02.md
@@ -106,4 +106,98 @@ Database statistics: total, 1 done (2.08%)    dium, 0 high impact
 
 ### 3、ProxyStrike
 
-书没有带，过年期间暂停更新。
+参考网页：
+- http://www.edge-security.com/proxystrike.php
+
+#### 第一种不太靠谱的安装方式
+
+ProxyStrike 安装方法如下，到 [谷歌代码](https://code.google.com/archive/p/proxystrike/downloads)
+下载二进制包，*/path/to/proxystrike-2.2.tar.bz2*
+
+```bash
+$ sudo tar xjf /path/to/proxystrike-2.2.tar.bz2 -C /opt
+$ sudo ln -s /opt/ProxyStrike-2.2/proxystrike /usr/local/bin/
+```
+
+就会在 */opt/ProxyStrike-2.2/* 解压缩上述的文件。并且可以直接使用 `proxystrke` 命令。但是，你会发现弹出如下的错误提示，
+
+```
+Traceback (most recent call last):
+  File "/usr/lib/python2.5/site-packages/cx_Freeze/initscripts/Console.py", line 29, in <module>
+  File "proxystrike-read-only/proxystrike.py", line 8, in <module>
+  File "proxystrike-read-only/crllr.py", line 4, in <module>
+  File "proxystrike-read-only/Proxynet.py", line 40, in <module>
+  File "proxystrike-read-only/reqresp.py", line 7, in <module>
+ImportError: libidn.so.11: cannot open shared object file: No such file or directory
+```
+
+经谷歌，找到 https://askubuntu.com/questions/507384/libidn-so-11-error-on-starting-an-app
+应该是本系统为64位，而该软件位32位，需要安装 `libidn11:i386`
+
+```bash
+$ sudo apt-get install libidn11:i386
+``` 
+
+继续运行 `ProxyStrike` 依旧报错，
+
+```
+Traceback (most recent call last):
+  File "/usr/lib/python2.5/site-packages/cx_Freeze/initscripts/Console.py", line 29, in <module>
+  File "proxystrike-read-only/proxystrike.py", line 8, in <module>
+  File "proxystrike-read-only/crllr.py", line 4, in <module>
+  File "proxystrike-read-only/Proxynet.py", line 40, in <module>
+  File "proxystrike-read-only/reqresp.py", line 7, in <module>
+ImportError: libssl.so.0.9.8: cannot open shared object file: No such file or directory
+```
+
+仿照上述除错方法，但是该依赖版本太低，无法找到对应的版本。去[网上](https://ubuntu.pkgs.org/14.04/ubuntu-universe-i386/libssl0.9.8_0.9.8o-7ubuntu3.1_i386.deb.html)下载了一个,
+
+```bash
+$ sudo dpkg -i /path/to/libssl0.9.8_0.9.8o-7ubuntu3.1_i386.deb
+```
+所幸，还能成功安装，接下来运行 `sudo proxystrike`，对于本电脑可能性能不够，一直 100% 运行，无法弹出窗口。
+
+
+#### 第二种不太优美的安装方式
+
+下载[源码](https://storage.googleapis.com/google-code-archive-source/v2/code.google.com/proxystrike/source-archive.zip)
+
+解压缩后，放置在 */opt/proxystrike*，翻看文件夹，创建软链接，
+
+```bash
+$ sudo ln -s /opt/proxystrike/trunk/proxystrike.py /usr/local/bin/proxystrike
+```
+
+这样就可以直接使用命令 `proxystrike` 了。但是输入 `proxystrike` 回车，报错，
+
+```
+(python:17055): Gtk-WARNING **: Unable to locate theme engine in module_path: "adwaita",
+
+(python:17055): Gtk-WARNING **: Unable to locate theme engine in module_path: "adwaita",
+Traceback (most recent call last):
+  File "/usr/local/bin/proxystrike", line 28, in <module>
+    ui.setController(Controller())
+  File "/opt/proxystrike/trunk/crllr.py", line 22, in __init__
+    self.attacker=Attacker()
+  File "/opt/proxystrike/trunk/attacker.py", line 47, in __init__
+    self.getPlugins()
+  File "/opt/proxystrike/trunk/attacker.py", line 95, in getPlugins
+    files=[os.path.join("plugins",i) for i in  os.listdir(os.path.join("plugins")) if os.path.isfile(os.path.join("plugins",i)) and i[-2:].lower()=="py"]
+OSError: [Errno 2] No such file or directory: 'plugins'
+
+```
+
+这个是目录错误，修改95行代码，
+
+```
+$ sudo vim /opt/proxystrike/trunk/attacker.py
+```
+
+把95行，改为
+
+```python
+		files=[os.path.join("/opt/proxystrike/trunk/plugins",i) for i in  os.listdir(os.path.join("/opt/proxystrike/trunk/plugins")) if os.path.isfile(os.path.join("/opt/proxystrike/trunk/plugins",i)) and i[-2:].lower()=="py"]
+
+```
+
+这样就安装成功了。
