--- a/src/ch-7-02.md
+++ b/src/ch-7-02.md
@@ -353,9 +353,76 @@ $ sudo ln -s /opt/w3af/w3af_gui /usr/local/bin/
 安装完成后，使用 `w3af_gui` 打开程序，但是报错，根据错误安装，
 
 ```bash
-$ sudo pip install pyClamd==0.4.0 PyGithub==1.21.0 GitPython==2.1.3 pybloomfiltermmap==0.3.14 phply==0.9.1 nltk==3.0.1 tblib==0.2.0 pdfminer==20140328 futures==3.2.0 pyOpenSSL==17.4.0 ndg-httpsclient==0.3.3 pyasn1==0.4.2 lxml==3.4.4 scapy-real==2.2.0-dev guess-language==0.2 cluster==1.1.1b3 msgpack-python==0.4.4 python-ntlm==1.0.1 halberd==0.2.4 darts.util.lru==0.5 Jinja2==2.10 vulndb==0.0.19 markdown==2.6.1 psutil==2.2.1 ds-store==1.1.2 termcolor==1.1.0 mitmproxy==0.13 ruamel.ordereddict==0.4.8 Flask==0.10.1 tldextract==1.7.2 pebble==4.3.6 acora==2.1 esmre==0.3.1 xdot==0.6
+$ sudo pip2 install pyClamd==0.4.0 PyGithub==1.21.0 GitPython==2.1.3 pybloomfiltermmap==0.3.14 phply==0.9.1 nltk==3.0.1 tblib==0.2.0 pdfminer==20140328 futures==3.2.0 pyOpenSSL==17.4.0 ndg-httpsclient==0.3.3 pyasn1==0.4.2 lxml==3.4.4 scapy-real==2.2.0-dev guess-language==0.2 cluster==1.1.1b3 msgpack-python==0.4.4 python-ntlm==1.0.1 halberd==0.2.4 darts.util.lru==0.5 Jinja2==2.10 vulndb==0.0.19 markdown==2.6.1 psutil==2.2.1 ds-store==1.1.2 termcolor==1.1.0 mitmproxy==0.13 ruamel.ordereddict==0.4.8 Flask==0.10.1 tldextract==1.7.2 pebble==4.3.6 acora==2.1 esmre==0.3.1 xdot==0.6
+```
+依旧报错，
+
+```
+No module named gtksourceview2
 ```
 
-用法从略。
+搜索得知，
+
+```
+$ sudo apt-cache search gtksource
+```
+
+有个软件叫 `python-gtksourceview2`，安装，
+
+```bash
+$ sudo apt-get install python-gtksourceview2
+```
+
+再次输入 `w3af_gui` 终于成功启动。
 
 ## 电子邮件系统的漏洞
+
+没有看懂，略过。
+
+## 暴力破解攻击
+
+### 1、hydra
+
+安装，
+
+```bash
+$ sudo apt-get install hydra
+```
+
+很难验证该做法，需要例子。
+
+### 2、DirBuster
+
+这是破解 web 服务器的目录和文件名的专用工具。安装需要搜索下载解压缩并建立软链接。
+
+参考网页：
+
+- https://samiux.blogspot.com/2013/06/howto-dirbuster-on-ubuntu-desktop-1204.html
+- https://sourceforge.net/projects/dirbuster/files/DirBuster%20Source/
+
+```bash
+$ cd /opt
+$ sudo wget "https://sourceforge.net/projects/dirbuster/files/DirBuster%20Source/1.0-RC1/DirBuster-1.0-RC1-src.tar.bz2/download" -O DirBuster-1.0-RC1.tar.bz2
+$ sudo tar jxvf DirBuster-1.0-RC1.tar.bz2
+$ sudo mv DirBuster-1.0-RC1 dirbuster
+$ sudo rm DirBuster-1.0-RC1.tar.bz2
+$ sudo ln -s /opt/dirbuster/DirBuster-1.0-RC1.sh /usr/local/bin/dirbuster
+```
+
+直接运行 `dirbuster` 还会出错，修改 */opt/dirbuster/DirBuster-1.0-RC1.sh* 为
+
+```bash
+$ sudo vim /opt/dirbuster/DirBuster-1.0-RC1.sh
+```
+
+其内容如下，
+
+```
+#!/bin/bash
+java -Xmx256M -jar /opt/dirbuster/DirBuster-1.0-RC1.jar
+```
+
+打开 `dirbuster` 后，可以在界面慢慢摸索了，例子后面添加。
+
+### 3、WebSlayer
+
